# ercot-bess-lab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
docs/adr/: 0001-medallion-architecture.md  0002-polars-duckdb-data-layer.md  0003-rtcb-regime-as-first-class-dimension.md  0004-incremental-raw-cache-and-report-routing.md  0005-default-settlement-point.md  0006-perfect-foresight-lp-formulation.md  0007-as-capacity-only-co-optimization.md  README.md
docs/milestones/: M1-skeleton-ingestion.md  M2-perfect-foresight.md
notebooks/: 00_project_showcase.ipynb  01_m1_data_showcase.ipynb  02_m2_perfect_foresight_showcase.ipynb
src/ercot_bess/: cli.py
src/ercot_bess/ingest/: ercot_client.py  pipeline.py  raw_cache.py
src/ercot_bess/models/: battery.py  market.py
src/ercot_bess/optimize/: data_loading.py  perfect_foresight.py
src/ercot_bess/transform/: dq.py  duckdb_store.py  silver.py
tests/: test_battery.py  test_dq.py  test_market.py  test_perfect_foresight.py  test_pipeline.py  test_raw_cache.py  test_silver.py
