[project]
name = "ercot-bess-lab"
version = "0.1.0"
description = "ERCOT battery storage dispatch backtester with a production-shaped data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gridstatus>=0.30",
    "polars>=1.9",
    "duckdb>=1.1",
    "cvxpy>=1.5",
    "highspy>=1.7",
    "pydantic>=2.9",
    "typer>=0.13",
    "plotly>=5.24",
    "pyarrow>=17.0",
]

[project.scripts]
ercot-bess = "ercot_bess.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ercot_bess"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
